--- a/styles.css
+++ b/styles.css
@@ -130,6 +130,7 @@ body {
 }
 button {
   padding: 10px 20px;
+  margin-left: 10px;
   border: none;
   font-size: 16px;
   font-weight: bold;
@@ -143,7 +144,10 @@ button {
 }
 
 #histories {
-  display: flex;
+  
+  display: grid;
+  grid-template-columns:repeat(3, 1fr);
+  grid-gap:10px;
   flex-wrap: wrap;
   justify-content: space-around;
 }
@@ -189,5 +193,12 @@ button {
   }
   .card {
     flex-direction: column;
+
   }
+  #histories{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap:10px;
+  }
+  
 }
